--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.513.0",
+    "microphone-stream": "^6.0.1",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "pdf-lib": "^1.17.1",
@@ -45,8 +46,7 @@
     "recharts": "^2.15.3",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
-    "uuid": "^11.1.0",
-    "voice-stream": "^1.0.1"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
